# dataStructure

./: .gitignore
CodeNest/binaryTree/: Makefile
CodeNest/ex1-14/: main  main.c
CodeNest/histogram/: README.md  horizontal_histogram.c
CodeNest/linklist/: Makefile
CodeNest/linklistMizo/: Makefile
CodeNest/queueLinklist/: Makefile
CodeNest/reverseString/: Makefile
CodeNest/reverseString3/: README.md
DataHub/doublyLinklist/: CMakeLists.txt
DataHub/doublyLinklist/include/: insert.h  linklist.h
DataHub/doublyLinklist/lib/: lib.c
DataHub/hashMap/: main.c
DataHub/singlyLinklist/: .gitignore  CMakeLists.txt
DataHub/singlyLinklist/include/: deletion.h  insertion.h  linklist.h  position.h  reverse.h
DataHub/singlyLinklist/lib/: lib.c
DataHub/singlyLinklist/src/: main.c
arrayStack/: Makefile
arrayStack/include/: stack.h
arrayStack/lib/: stack.c
arrayStack/src/: main.c
arrayStack2/: Makefile  README.md
arrayStack2/include/: init.h  stack.h
arrayStack2/lib/: init.c  stack.c  util.c
arrayStack2/src/: main.c
binaryTree/: Makefile
binaryTree/include/: lib.h
binaryTree/lib/: lib.c
broadcastAddress/src/: main.c
circularQueue/include/: lib.h
circularQueue/lib/: lib.c
circularQueue/src/: main.c
k_and_r/ex1-1/: hello.c
k_and_r/ex1-10/: main.c  test.txt
k_and_r/ex1-11/: README.md
lalen/: Makefile  README.md
linklist/: Makefile
linklistMizo/: README.md  run  test.sh
oop-in-c/: main.c
queueLinklist/: README.md
reverseString/: README.md
reverseString2/: Makefile  README.md
reverseString3/: README.md
(+57 files in other folders)
